--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,6 +2,7 @@ env:
   browser: true
   es6: true
 
+# See https://github.com/OCA/odoo-community.org/issues/37#issuecomment-470686449
 parserOptions:
   ecmaVersion: 2019
 
@@ -24,6 +25,7 @@ globals:
   luxon: readonly
 
 # Styling is handled by Prettier, so we only need to enable AST rules;
+# see https://github.com/OCA/maintainer-quality-tools/pull/618#issuecomment-558576890
 rules:
   accessor-pairs: warn
   array-callback-return: warn
